tests/language_modules/04_types/invalid_semantics/boolean_range.vf
module BooleanRange

type Flag is Boolean range 0..1

end BooleanRange